# techain-ia

./: .gitignore  CLAUDE.md  pyproject.toml
apps/: market_snapshot.py  watchdog_service.py
apps/backtest_service/: run_backtest.py
apps/dashboard/: app.py  positions.py
apps/research_service/: run_research.py  run_research_rsi_only.py
apps/telegram_bot/: bot.py  daily_btc_report.py
apps/trader_service/: main.py  replay.py
config/: paper_accelerated.yaml  paper_accelerated_4h.yaml  production.yaml  research.yaml.backup  research_bollinger.yaml  research_bollinger_stocks.yaml  research_etfs.yaml  research_eth_1d.yaml  research_rsi_only.yaml  research_smart_money.yaml  research_sol_1d.yaml  risk.yaml  strategies.yaml  system.yaml
core/backtesting/: __init__.py  metrics.py  monte_carlo.py  runner.py
core/decision_engine/: engine.py
core/event_bus/: __init__.py  bus.py  events.py
core/execution_engine/: __init__.py  engine.py  paper_broker.py  (+1 more)
docs/: PROTOCOL.md  RESEARCH.md  RESILIENCE.md  STATUS_REPORT_FORMAT.md  architecture.md  backtesting.md  interfaces.md  observability.md  patrones.md  risk_model.md  tier_allocation_system.md
observability/: __init__.py
rag/: config.py  demo.py  embeddings.py  ingest.py  rag_pipeline.py  requirements.txt  retriever.py  vectorstore.py
scripts/: correlation_pearson.csv  correlation_spearman.csv  create_scheduler.vbs  deploy_vps.sh  register_startup.bat  run_paper_trader.bat  run_paper_trader_scheduled.bat  setup_manual.bat  setup_scheduler.ps1  setup_tasks.vbs  start_all_services.bat  strategy_correlation.py
(+97 files in other folders)
